2006-01-13  David Hyatt  <hyatt@apple.com>

        Eliminate QSize and add the new class IntSize in the
        platform subdirectory.  Factor out the Objective-C portion
        of IntSize into a platform-specific IntSize.mm that resides
        in the mac subdirectory.

        Win32 can just compile IntSize.cpp and doesn't need any
        platform-specific extension here.
        
        Reviewed by darin

        * WebCore.xcodeproj/project.pbxproj:
        * kcanvas/KCanvasImage.h:
        * kcanvas/device/quartz/KCanvasResourcesQuartz.h:
        (KCanvasImageQuartz::init):
        (KCanvasImageQuartz::size):
        * kcanvas/device/quartz/KRenderingDeviceQuartz.mm:
        (KRenderingDeviceQuartz::contextForImage):
        * khtml/css/cssstyleselector.cpp:
        (khtml::CSSStyleSelector::applyProperty):
        * khtml/ecma/kjs_html.cpp:
        (KJS::Image::getValueProperty):
        * khtml/ecma/kjs_window.cpp:
        (KJS::WindowFunc::callAsFunction):
        * khtml/misc/CachedImage.cpp:
        (khtml::CachedImage::pixmap_size):
        (khtml::CachedImage::data):
        * khtml/misc/CachedImage.h:
        * khtml/misc/CachedImageCallback.cpp:
        (khtml::CachedImageCallback::notifyUpdate):
        (khtml::CachedImageCallback::notifyFinished):
        * khtml/rendering/render_applet.cpp:
        (RenderApplet::createWidgetIfNecessary):
        * khtml/rendering/render_form.cpp:
        (RenderLineEdit::calcMinMaxWidth):
        (RenderFileButton::calcMinMaxWidth):
        (RenderSelect::layout):
        (RenderTextArea::calcMinMaxWidth):
        (RenderSlider::calcMinMaxWidth):
        * khtml/rendering/render_image.cpp:
        (RenderImage::paint):
        * khtml/rendering/render_object.cpp:
        (RenderObject::paintBorder):
        * khtml/rendering/render_style.h:
        (khtml::RenderStyle::borderTopLeftRadius):
        (khtml::RenderStyle::borderTopRightRadius):
        (khtml::RenderStyle::borderBottomLeftRadius):